--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active mr-2" aria-current="page" href="#about-me">ABOUT ME</a>
+            <a class="nav-link active mr-2" aria-current="page" href=".section1">ABOUT ME</a>
             <a class="nav-link mr-2" href="#project">PROJECT</a>
             <a class="nav-link mr-2" href="#get-in-touch">GET IN TOUCH</a>
           </div>
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 col-sm-12">
-            <h1 class="mb-5" style="text-align:left">Hey there! I'm <span style="color: #6100FF">Yi-Chen Wu</span>, a product designer based in Taipei, Taiwan.</h1>
+            <h1 class="section1 mb-5" style="text-align:left">Hey there! I'm <span style="color: #6100FF">Yi-Chen Wu</span>, a product designer based in Taipei, Taiwan.</h1>
             <p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto iusto nam sunt, at praesentium placeat eos, doloribus quidem distinctio quasi sed tenetur excepturi, a similique ad in molestias magnam aliquam!</p>
           </div>
           <div class="col-lg-6 col-sm-12" style="text-align: center;">
