--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active mr-2" aria-current="page" href=".section1">ABOUT ME</a>
-            <a class="nav-link mr-2" href="#project">PROJECT</a>
-            <a class="nav-link mr-2" href="#get-in-touch">GET IN TOUCH</a>
+            <a class="nav-link mr-2" href=".section2">PROJECT</a>
+            <a class="nav-link mr-2" href=".section3">GET IN TOUCH</a>
           </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
     </section>
 
     <div id="get-in-touch">
-      <h2 class="mb-2">GET IN TOUCH ?</h2>
+      <h2 class="section3 mb-2">GET IN TOUCH ?</h2>
       <span class="dot m-2"></span>
       <span class="dot m-2"></span>
       <span class="dot m-2"></span>
