--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active mr-2" aria-current="page" href="##about-me">ABOUT ME</a>
+            <a class="nav-link active mr-2" aria-current="page" href="#about-me">ABOUT ME</a>
             <a class="nav-link mr-2" href="#project">PROJECT</a>
             <a class="nav-link mr-2" href="#get-in-touch">GET IN TOUCH</a>
           </div>
