--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
     <section id="project" style="height: 100vh;">
       <div class="container">
+        <h1 class="project-section mb-5" style="text-align: center; font-weight: 800;">PROJECT</h1>
         <div class="row align-items-center" style="text-align: center;">
           <div class="col-lg-6 col-sm-12" >
             <a href="">
