--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
     .navbar a:hover {
       color: #333;
     }
+    
+    .submit-btn {
+      border-radius: 0%;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
+      text-align: center;
+      background: #F2F1F1;
+      color: #6100FF;
+      font-size: 1rem;
+    }
+    .submit-btn:hover {
+      background: #4300a8;
+      color: #fff;
+    }
 
     #project {
       margin-top: 10vh;
