--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-lg-6 col-sm-12">
             <h1 class="mb-5" style="text-align:left">Hey there! I'm <span style="color: #6100FF">Yi-Chen Wu</span>, a product designer based in Taipei, Taiwan.</h1>
 <!--             <p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto iusto nam sunt, at praesentium placeat eos, doloribus quidem distinctio quasi sed tenetur excepturi, a similique ad in molestias magnam aliquam!</p> -->
-            <a href="https://drive.google.com/file/d/1HojKye3VgZecAWtAe7wmsyfF-iPJxytf/view"><button type="button" class="btn resume-btn">RESUME</button></a>
+            <a href="https://drive.google.com/file/d/1HojKye3VgZecAWtAe7wmsyfF-iPJxytf/view" target="_blank" title="resume"><button type="button" class="btn resume-btn">RESUME</button></a>
           </div>
           <div class="col-lg-6 col-sm-12" style="text-align: center;">
             <img src="D4A03-1.jpg" alt="" style="width: 35vw; min-width: 500px; margin: 10px;">
