--- a/index.html
+++ b/index.html
@@ -48,19 +48,20 @@
       color: #333;
     }
     
-    .submit-btn {
+    .resume-btn {
       border-radius: 0%;
       padding-top: 10px;
       padding-bottom: 10px;
       padding-left: 20px;
       padding-right: 20px;
       text-align: center;
-      background: #F2F1F1;
-      color: #6100FF;
+      background: #6100FF;
+      color: #fff;
       font-size: 1rem;
     }
-    .submit-btn:hover {
-      background: #4300a8;
+
+    .resume-btn:hover {
+      background: #240158;
       color: #fff;
     }
 
